// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`+++capturing Snapshot of SelectInput 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    country
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    <span>
      United Kingdom
    </span>
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;

exports[`+++capturing Snapshot of SelectInput simple 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    level
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    <span>
      3
    </span>
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;

exports[`+++capturing Snapshot of SelectInput value 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    level
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    <span>
      3
    </span>
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;

exports[`+++capturing Snapshot of SelectInput value 2`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    size
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    <span>
      large
    </span>
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;

exports[`+++capturing Snapshot of SelectInput with icon 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    temperature
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    <span>
      <i
        className="fa fa-thermometer-three-quarters dp-icon dp-icon--s"
      />
      <span>
         
      </span>
      Warm
    </span>
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;
